Use margin instead of line height for postioning to avoid overflowWithToggle directive showing toggle incorrectly

--- a/app/styles/inspector.styl
+++ b/app/styles/inspector.styl
@@ -4,6 +4,7 @@
 
 inspector-row-height = 21px
 .inspector-footer
+  margin-top: 9px
   // background-color: #EEF1F8
   font-size: 12px
   width: 100%
@@ -19,11 +20,11 @@ inspector-row-height = 21px
     display: none
 
   &.contracted
-    margin-top: 3px
-    max-height: 39px
+    max-height: 21px
     overflow: hidden
-    .inspector-footer-row > ul
-      line-height: 39px
+
+  .inspector-footer-row
+    line-height: 21px
 
   .inspector-footer-row > ul
     word-break: break-word
